--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@
     background-repeat: no-repeat;
   }
   
-  .card-container{
+  .f-container{
     display: flex;
     justify-content: flex-end;
     position: absolute;
@@ -79,9 +79,80 @@
   .submit-btn {
     padding: 0px 15px;
   }
+
+
+
+
+
+  .card-collection {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 70%;
+    background-color: rgba(56, 56, 52, 0.2);
+    padding: 12px;
+  }
+  #carousel-actions {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 45%;
+
+    justify-content: space-between;
+  }
+  #carousel-lftbtn, #carousel-rgtbtn {
+    background-color: black;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+  }
+  #carousel-lftbtn p, #carousel-rgtbtn p{
+    color: white;
+    text-align: center;
+  }
+  #carousel-lftbtn p:hover, #carousel-rgtbtn p:hover{
+    color: black;
+  }
+  .card {
+    display: none;
+    border: 1px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 300px;
+    padding: 5px;
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+  }
+  .card-focus1 {
+    display: block;
+  }
+  .card-focus2 {
+    display: block;
+  }
+  .card-img {
+    width: 100%;
+  }
+  .card-description {
+    width: 100%;
+  }
+  .card-description h4, p {
+    margin: 15px 0px;
+  }
+  .card-description h4 {
+    font-family: 'Roboto', sans-serif;
+  }
+  .card-hidden-description {
+    display: none;
+  }
+
+
+
+
   
   footer{
-      position: relative;
+    position: relative;
     height: 150px;
     padding: 25px;
     text-align: center;
@@ -98,18 +169,24 @@
 
 
 
-  /* medium */
+  /* medium & small*/
   @media screen and (max-width: 992px) {
     
     #form{
         width: 100%;
     }      
+    .card-collection {
+      width: 90%;
+    }
 
+    .card-focus2 {
+      display: none;
+    }
   }
 
   /* small */
   @media screen and (max-width: 700px) {
-    .card-container{
+    .f-container{
         justify-content: center;        
     }
     .input {
@@ -125,7 +202,7 @@
     }
 
     .section-container{
-        height: 500px;
+        height: 900px;
     }
     .background-section-one{
         background-attachment: scroll;
